--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "ttunnel",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "description": "TTunnel is a minimal, elegant opensource WebSocket based HTTP tunneling.",
     "keywords": [
         "ttunnel",
@@ -22,8 +22,8 @@
     },
     "author": "Abdallah Mohammed <abdallah.r660@gmail.com>",
     "license": "GNU",
-    "main": "./src/index.js",
-    "types": "./src/index.d.ts",
+    "main": "./build/index.js",
+    "types": "./build/index.d.ts",
     "bin": {
         "ttunnel": "bin/cli"
     },
@@ -71,7 +71,6 @@
         "commander": "^11.0.0",
         "debug": "^4.3.4",
         "finalhandler": "^1.2.0",
-        "got": "^13.0.0",
         "node-localstorage": "^3.0.5",
         "serve-static": "^1.15.0",
         "ws": "^8.13.0"
@@ -92,7 +91,6 @@
         "japa": "^4.0.0",
         "mocha": "^10.2.0",
         "np": "^8.0.4",
-        "reflect-metadata": "^0.1.13",
         "ts-node": "^10.9.1",
         "typescript": "^5.2.2"
     }
